--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to Autoscale Instance</h1> 
     <div>Server: <h3>Hostname $(hostname -f) </h3></div> 
     <div> 
-        Go to <a href="index.php">Lab Page</a> 
+        Go to <a href="webapp.php">Lab Page</a> 
     </div> 
 </body> 
 </html>
